--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+html,body 
+  height:100%
+  width:100%
+  margin:0
+
+body
+    background-image: url('/../assets/images/login-wallpaper.jpg')
+    display:flex
+
+::-webkit-scrollbar
+     width: 10px
+::-webkit-scrollbar-track
+    background-color: #0a141e
+::-webkit-scrollbar-thumb
+    background: #ff4654
