Register component and Route validation

--- a/src/app/agent-view/agent-view.component.sass
+++ b/src/app/agent-view/agent-view.component.sass
@@ -1,10 +1,16 @@
 .home-background
-    background-image: url('/assets/images/home-wallpaper.png')
+  background-image: url('/assets/images/home-wallpaper.png')
 
-.example-header-image 
+.example-header-image
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg')
   background-size: cover
 
 .ability-content
-    background: #08121f
-    color: #ffffff
+  background: #08121f
+  color: #ffffff
+
+.actions-position
+  display: flex
+  align-content: center
+  justify-content: flex-end
+  flex-direction: row
