--- a/src/app/agent-view/agent-view.component.html
+++ b/src/app/agent-view/agent-view.component.html
@@ -9,6 +9,9 @@
 
             <div class="col-8">
                 <mat-card class="example-card">
+                    <mat-card-actions class="actions-position">
+                        <button mat-button color="primary" (click)="backToPreviousPage()">Go Back</button>
+                      </mat-card-actions>
                     <mat-card-header>
                         <mat-card-title>{{agent.displayName}}</mat-card-title>
                         <mat-card-subtitle>{{agent.role.displayName}}</mat-card-subtitle>
@@ -49,9 +52,9 @@
                         </div>
 
                     </mat-card-content>
-                    <mat-card-actions>
+                    <!-- <mat-card-actions>
                       <button mat-button color="primary" (click)="backToPreviousPage()">Back</button>
-                    </mat-card-actions>
+                    </mat-card-actions> -->
                 </mat-card>
             </div>
 
