--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,7 +5,7 @@ html,body
   margin:0
 
 body
-    background-image: url('/../assets/images/login-wallpaper.jpg')
+    background-image: url('/assets/images/home-wallpaper.png')
     display:flex
 
 ::-webkit-scrollbar
