--- a/src/app/agent-view/agent-view.component.html
+++ b/src/app/agent-view/agent-view.component.html
@@ -8,7 +8,7 @@
             <div class="col"></div>
 
             <div class="col-8">
-                <mat-card class="example-card">
+                <mat-card class="example-card" *ngIf="agent != null">
                     <mat-card-actions class="actions-position">
                         <button mat-button color="primary" (click)="backToPreviousPage()">Go Back</button>
                       </mat-card-actions>
@@ -52,9 +52,6 @@
                         </div>
 
                     </mat-card-content>
-                    <!-- <mat-card-actions>
-                      <button mat-button color="primary" (click)="backToPreviousPage()">Back</button>
-                    </mat-card-actions> -->
                 </mat-card>
             </div>
 
