--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
                                 {{agent.description}}
                             </mat-card-content>
 
-                            <button class="form-button-action" color="primary" mat-button (click)="viewAgent(agent.uuid)">See more</button>
+                            <button class="form-button-action" color="primary" mat-button (click)="viewAgent(agent.uuid)">Learn more</button>
                             
                         </mat-card>
                     </div>
