--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,20 +22,26 @@
     
                             <mat-form-field appearance="fill" class="full-width">
                                 <mat-label>Username</mat-label>
-                                <input matInput placeholder="user@email.com" type="text">
+                                <input matInput placeholder="user@email.com" type="text" [formControl]="email" required>
+                                <mat-error *ngIf="email.invalid">{{getUsernameErrorMessage()}}</mat-error>
                             </mat-form-field>
     
+                            <br />
                             <br />
     
                             <mat-form-field class="example-full-width" appearance="fill">
                                 <mat-label>Enter your password</mat-label>
-                                <input matInput [type]="hide ? 'password' : 'text'" placeholder="********">
+                                <input matInput [type]="hide ? 'password' : 'text'" placeholder="********" [formControl]="password" required>
+                                <mat-error *ngIf="email.invalid">{{getPasswordErrorMessage()}}</mat-error>
                                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                                     [attr.aria-pressed]="hide">
                                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </button>
                             </mat-form-field>
     
+                            <br />
+                            <br />
+
                             <mat-checkbox color="primary">Keep me connected</mat-checkbox>
     
                         </div>
