simple http service for agents endpoint

--- a/src/app/agent-view/agent-view.component.html
+++ b/src/app/agent-view/agent-view.component.html
@@ -24,10 +24,10 @@
 
                         <h2>Role</h2>
                         <p>
-                            <b>Name:</b> {{agent.role.displayName}}
+                            <strong>Name:</strong> {{agent.role.displayName}}
                         </p>
                         <p>
-                            <b>Description:</b> {{agent.role.description}}
+                            <strong>Description:</strong> {{agent.role.description}}
                         </p>
 
                         <h2>Abilities</h2>
@@ -35,7 +35,7 @@
                         <div *ngFor="let ability of agent.abilities">
 
                             <p *ngIf="!ability.displayIcon != null && ability.displayIcon.includes('https')">
-                                <b>{{ability.displayName}}</b>
+                                <strong>{{ability.displayName}}</strong>
                             </p>
 
                             <div class="row ability-content" *ngIf="!ability.displayIcon != null && ability.displayIcon.includes('https')">
