--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
                                 <mat-card-title>{{agent.displayName}}</mat-card-title>
                                 <mat-card-subtitle *ngIf="agent.role != null">{{agent.role.displayName}}
                                 </mat-card-subtitle>
-                                <img mat-card-md-image src="{{agent.displayIcon}}">
+                                <img mat-card-md-image src="{{agent.displayIcon}}" alt="agent card icon">
                             </mat-card-title-group>
                             <br />
                             <mat-card-content>
