--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,27 +20,30 @@
 
                         <mat-form-field appearance="fill" class="full-width">
                             <mat-label>Username</mat-label>
-                            <input matInput placeholder="user@email.com" type="text">
+                            <input matInput placeholder="user@email.com" type="text" [formControl]="email" required>
+                            <mat-error *ngIf="email.invalid">{{getUsernameErrorMessage()}}</mat-error>
                         </mat-form-field>
 
                         <br />
 
                         <mat-form-field class="example-full-width" appearance="fill">
                             <mat-label>Password</mat-label>
-                            <input matInput [type]="hide ? 'password' : 'text'" placeholder="********">
+                            <input matInput [type]="hide ? 'password' : 'text'" placeholder="********" [formControl]="password" required>
                             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                                 [attr.aria-pressed]="hide">
                                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                             </button>
+                            <mat-error *ngIf="email.invalid">{{getPasswordErrorMessage()}}</mat-error>
                         </mat-form-field>
 
                         <mat-form-field class="example-full-width" appearance="fill">
                             <mat-label>Confirm password</mat-label>
-                            <input matInput [type]="hide ? 'password' : 'text'" placeholder="********">
+                            <input matInput [type]="hide ? 'password' : 'text'" placeholder="********" [formControl]="confirmPassword" required>
                             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                                 [attr.aria-pressed]="hide">
                                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                             </button>
+                            <mat-error *ngIf="email.invalid">{{getPasswordErrorMessage()}}</mat-error>
                         </mat-form-field>                        
 
                     </div>
