--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -29,4 +29,4 @@ input.example-right-align
 
 .login-wallpaper
   background-image: url('/../assets/images/login-wallpaper.jpg')
-  height: -webkit-fill-available
+  height: 100%
